hello-rb/k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cool-counter-redis
  labels:
    app: cool-counter-redis
spec:
  selector:
    matchLabels:
      app: cool-counter-redis
  template:
    metadata:
      labels:
        app: cool-counter-redis
    spec:
      containers:
      - name: redis
        image: redis
        imagePullPolicy: Never
        ports:
        - containerPort: 6379
