hello-rb/k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-web
  labels:
    app: counter-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: counter-web
  template:
    metadata:
      labels:
        app: counter-web
    spec:
      containers:
      - name: counter-web
        image: counter-web
        imagePullPolicy: Never
        ports:
        - containerPort: 4567
