hello-rb/k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cool-counter-redis
  labels:
    app: cool-counter-redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: cool-counter-redis
