hello-rb/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cool-counter-web
  labels:
    app: cool-counter
spec:
  selector:
    app: cool-counter-web
  ports:
    - protocol: TCP
      port: 4567
      targetPort: 4567
  type: LoadBalancer
