hello-rb/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /ping
        backend:
          serviceName: cool-counter-web
          servicePort: 4567
      - path: /hello
        backend:
          serviceName: cool-counter-web
          servicePort: 4567
